import { TileType } from "./tile-type";

export class BottomLine {
    public content : Array<TileType>;

    constructor() {
        this.content = new Array<TileType>();
    }
}
